--- a/src/components/Organizations/GovernanceContainer/governance-container.module.css
+++ b/src/components/Organizations/GovernanceContainer/governance-container.module.css
@@ -85,3 +85,8 @@
 .ProposeContents .TradeMarketTokenSelector figure img {width: 100%; height: 100%; display: block;}
 
 .ProposalOpen h6 {font-size: 15px; color: #000000; width: 100%; display: inline-block; margin: 10px auto; text-align: left; padding: 2px 30px;}
+
+.Options {width: 60px; display: inline-block; vertical-align: middle;}
+.OptionOpen {width: 100%; display: inline-block; padding: 10px 30px; text-align: left; background-color: #ffffff; border-radius: 20px; margin: 10px auto;}
+.OptionOpen p {display: inline-block; font-size: 12px; text-align: left; vertical-align: middle; font-weight: bold;}
+.OptionOpen input {display: inline-block; font-size: 12px; text-align: left; vertical-align: middle; height: 30px; width: 200px; background-color: #e4e4e4; border-radius: 12px; border: none; margin: 5px 20px;}
