--- a/src/components/Organizations/GovernanceContainer/governance-container.module.css
+++ b/src/components/Organizations/GovernanceContainer/governance-container.module.css
@@ -89,4 +89,4 @@
 .Options {width: 60px; display: inline-block; vertical-align: middle;}
 .OptionOpen {width: 100%; display: inline-block; padding: 10px 30px; text-align: left; background-color: #ffffff; border-radius: 20px; margin: 10px auto;}
 .OptionOpen p {display: inline-block; font-size: 12px; text-align: left; vertical-align: middle; font-weight: bold;}
-.OptionOpen input {display: inline-block; font-size: 12px; text-align: left; vertical-align: middle; height: 30px; width: 200px; background-color: #e4e4e4; border-radius: 12px; border: none; margin: 5px 20px;}
+.OptionOpen input {display: inline-block; font-size: 12px; text-align: left; vertical-align: middle; height: 30px; width: 260px; background-color: #e4e4e4; border-radius: 12px; border: none; margin: 5px 20px; padding: 5px 8px;}
