--- a/src/pages/governances/dapp/organizations-main-sections.module.css
+++ b/src/pages/governances/dapp/organizations-main-sections.module.css
@@ -10,7 +10,15 @@
 .SingleContentPage {width: 100%; max-width: 990px; text-align: center;}
 .CollectionLeft {width: 300px; display: inline-block; text-align: center;  vertical-align: top;}
 .CollectionRight {width: 660px;display: inline-block; text-align: center;  margin-left: 30px;vertical-align: top;}
-
+.CreatePage {width: 800px; padding: 50px; background-color: #ffffff; margin: 50px auto; border-radius: 20px; display: block;}
+.CreateBoxDesc {width: 330px;display: inline-block;margin: 10px 10px;padding: 30px;background-color: #f7fafe;border: 1px solid #e0e2e6;border-radius: 12px;}
+.CreateBoxDesc h6 {font-size: 16px;font-weight: 700;}
+.CreateBoxDesc p {font-size: 13px;}
+.CreateBoxDesc p {width: 250px; margin: 5px auto; line-height: 1.3;}
+.ExtLinkButtonAlpha {border: 1px solid #849BBD;color: #849BBD;border-radius: 5px;display: inline-block;margin: 5px;font-size: 11px;padding: 5px 8px;text-align: center;cursor: pointer;box-shadow: none;background-color: transparent;}
+.NextStep {width: auto; margin: 5px; padding: 5px 12px; text-align: center; font-size: 11px; border-radius: 5px; border: none !important; cursor: pointer;background-color: #849bbd;color: #fff; box-shadow: none;  margin: 0 auto;}
+.AdvancedLinks {width: 100%; display: inline-block; margin: 50px auto 0px auto; text-align: center;}
+.AdvancedLinks a {font-size: 11px; color: #535353; text-decoration: underline;}
 
 .title {
   margin-bottom: calc(var(--unit) * 3) 0;
