--- a/src/all.module.css
+++ b/src/all.module.css
@@ -324,8 +324,8 @@ input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
 .ICViewCover {width: 300px; min-height: 150px; display: inline-block; margin-right: 140px; border-radius: 20px; overflow: hidden; vertical-align: middle; box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
 .ICViewCover img {display: block; width: 100%; height: 100%;}
 
-.ViewDescription {width: 300px; display: inline-block; text-align: left; padding: 25px; margin-top: 45px; background-color: #ffffff; border-radius: 20px; box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
-.ViewDescription p {font-size: 12px; color: #676666; line-height: 1.3;}
+.ViewDescriptionL {width: 300px; display: inline-block; text-align: left; padding: 25px; margin-top: 45px; background-color: #ffffff; border-radius: 20px; box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
+.ViewDescriptionL p {font-size: 12px; color: #676666; line-height: 1.3;}
 
 .InfoBox {padding: 15px 15px 30px 15px; width: 570px; display: inline-block;border-radius: 20px; background-color: #ffffff; box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); text-align: left; position: relative;}
 .InfoBox h1 {width: 400px; font-size: 22px; font-weight: bold; color: #000000; text-align: left; display: inline-block;}
@@ -388,8 +388,8 @@ input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
 .OrgSingle {width: 300px; display: inline-block; border-radius: 20px;overflow: hidden; background-color: #ffffff; box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); margin: 10px;background-color: #ffffff;}
 .OrgSingle figure {display: block; width: 100px; height: 100px; overflow: hidden; position: relative;display: inline-block; vertical-align: top;}
 .OrgSingle figure img {display: block; width: 100%; height: 100%; position: absolute; left: 0; top: 0;}
-.OrgSingle .OrgTitle {background-color: #F0F0F0;width: 200px; height: 100px; overflow: hidden; padding: 0px 0px 15px 0px; text-align: left; display: inline-block;  display: inline-block; vertical-align: middle; color: #000000;}
-.OrgSingle .OrgTitle h6 {width: 100%; display: block; max-height: 45px; padding: 15px 15px; font-size: 15px; color: #000000; background-color: #ffffff; text-align: left;}
+.OrgTitleEx {background-color: #F0F0F0;width: 200px; height: 100px; overflow: hidden; padding: 0px 0px 15px 0px; text-align: left; display: inline-block;  display: inline-block; vertical-align: middle; color: #000000;}
+.OrgTitleEx h6 {width: 100%; min-height: 50px; display: block; max-height: 45px; padding: 15px 15px; font-size: 15px; color: #000000; background-color: #ffffff; text-align: left;}
 .OrgTitleAside {width: 100px; display: inline-block; padding: 10px; height: 55px;}
 .OrgTitleAsideB {width: 99px; border-left: 1px solid #a0a0a0; display: inline-block;padding: 15px 10px 10px 10px;height: 55px;}
 .OrgTitleAside p, .OrgTitleAsideB p {text-align: center; font-size: 10px; color: #464646; line-height: 1.3;}
@@ -575,15 +575,7 @@ input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
 
 
 @media only screen and (max-width: 1200px) {
-  .Header {
-    height: 60px;
-    display: block;
-    text-align: left;
-    width:100%;
-    position: relative;
-    margin-bottom: 20px;
-    min-height: auto;
-  }
+  .Header {height: 60px;display: block;text-align: left;width:100%;position: relative;margin-bottom: 20px;min-height: auto;}
   .Header .FixedHeader {position: fixed; left: 0; top: 0; width: 100%; height: 60px;backdrop-filter: blur(6px);}
   .Header .BlurHeader {display: block; position: fixed; left: 0%; top: 0%; width: 100%; height: 60px;border-radius: 0;  border: 0; background: linear-gradient(-130deg,#c1befc4d,#fdf7f515 80%); box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-webkit-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
   .logoMain {height: 40px; width: 50px; margin: 10px 0px 0px 10px; display: inline-block;vertical-align: top;}
