--- a/src/all.module.css
+++ b/src/all.module.css
@@ -433,6 +433,17 @@ input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
 .HostToolsDelegationsBTN {width: 240px; display: inline-block; margin: 5px;}
 
 
+.CreationPageLabelS {width: 100%; display: inline-block; padding: 20px;}
+.CreationPageLabelFS {width: 100%; display: inline-block; background-color: #e9effc;border: 1px solid #e0e2e6;border-radius: 12px; padding: 20px 50px; margin: 15px auto;}
+.CreationPageLabelFS h6 {width: 100%; display: inline-block; text-align: center; font-size: 16px;}
+.CreationPageLabelFS input {width: 200px; display: inline-block; background-color: #fff; border: none; text-align: left; padding: 10px; font-size: 14px; border-radius: 12px; margin: 10px auto;}
+.CreationPageLabelFS input[type="color"] {width: 90px; height: 40px;}
+.CreationPageLabelFS textarea {width: 200px; display: inline-block; background-color: #fff; border: none; text-align: left; padding: 10px; font-size: 12px; border-radius: 12px; margin: 10px auto; min-height: 100px;}
+.CreationPageLabelFS p {width: 100%; display: inline-block; text-align: center; font-size: 12px; line-height: 1.3;}
+.ActionDeploy {width: 100%; display: inline-block; margin: 20px auto;}
+.Web3CustomBTN {width: 200px; margin: 0 auto; padding: 5px 12px; text-align: center; font-size: 13px; border-radius: 15px; border: none !important; cursor: pointer;background-color: #7474f7; color: #ffffff; font-weight: bold; margin: 5px;}
+.Web3BackBTN {width: 200px; margin: 0 auto; padding: 5px 12px; text-align: center; font-size: 13px; border-radius: 15px; border: none !important; cursor: pointer;background-color: #7474f7; color: #ffffff; font-weight: bold;font-weight: normal !important; background-color: #e4e4e4 !important; color: #6e6e6e !important; margin: 5px;}
+
 .Riles {width: 100%; display: inline-block; margin: 10px auto; padding: 5px;}
 .Rules > p {font-size: 16px; font-weight: bold; color: #000000; margin: 10px 0;}
 .Upshots {width: 100%; display: block; margin: 10px auto; padding: 5px;}
