--- a/src/components/Global/MainTemplate/main-template.module.css
+++ b/src/components/Global/MainTemplate/main-template.module.css
@@ -6,6 +6,7 @@
   display: block;
   text-align: left;
 }
+.OnlyMobile {display: none;}
 
 .BlockNews {position: fixed; bottom: 10px; right: 10px; z-index: 10000000000000; -webkit-backdrop-filter: blur(6px);backdrop-filter: blur(6px); padding: 12px; border-radius: 10px; font-size: 10px; font-weight: bold; color: #555555;}
 .BlockNews a {color: #555555;}
@@ -27,3 +28,8 @@
 @media only screen and (max-width: 1200px) {
   .container { width: 98%; margin: 20px auto;}
 }
+@media only screen and (max-device-width: 990px) {
+  .root {display: none !important;}
+  .OnlyMobile {display: inline-block; margin: 100px auto; width: 100%; padding: 50px; text-align: center;}
+}
+
