--- a/src/all.module.css
+++ b/src/all.module.css
@@ -591,3 +591,7 @@ input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
   .logoMain {height: 40px; width: 50px; margin: 10px 0px 0px 10px; display: inline-block;vertical-align: top;}
   .logoMain img {height: 40px; width: 50px; display: block;}
 }
+
+@media only screen and (max-device-width: 990px) {
+  
+}
